--- a/src/assets/stylesheet/layout.scss
+++ b/src/assets/stylesheet/layout.scss
@@ -173,8 +173,7 @@ select::-ms-expand {
 .selectbox {
 	display: inline-block;
 	position: relative;
-	background: #fff;
-	border: 1px solid #ccc;
+	background: $white;
 
 	.option {
 		padding: 8px 5px 8px 12px;
@@ -182,12 +181,16 @@ select::-ms-expand {
 			overflow-y: auto;
 			width: 100%;
 			max-height: 500px;
-			border: 1px solid #ccc;
+			border: 1px solid $gray_400;
 			position: absolute;
 			z-index: 1;
-			background: #fff;
+			background: $white;
 			border-top: none;
-			margin-top: 1px;
+			border-radius: 0 0 10px 10px;
+		}
+		&:hover {
+			background: $gray_300;
+			cursor: pointer;
 		}
 	}
 
@@ -197,6 +200,8 @@ select::-ms-expand {
 		align-items: center;
 		height: 100%;
 		padding: 0 8px;
+		border: 1px solid $gray_400;
+		border-radius: 10px;
 		&:after {
 			content: '';
 			display: block;
@@ -205,13 +210,14 @@ select::-ms-expand {
 			right: 14px;
 			width: 8px;
 			height: 8px;
-			border: solid gray;
+			border: solid $gray_500;
 			border-width: 0 2px 2px 0;
 			transform: rotate(45deg);
 			-webkit-transform: rotate(45deg);
 		}
 
 		&--active {
+			border-radius: 10px 10px 0 0;
 			&:after {
 				top: 18px;
 				transform: rotate(-135deg);
@@ -279,8 +285,8 @@ select::-ms-expand {
 			color: #333;
 		}
 		&.invalid {
-			border: 1px solid red;
-			color: red;
+			border: 1px solid $negative;
+			color: $negative;
 		}
 		&:required + .inputbox__label {
 			position: relative;
@@ -291,7 +297,7 @@ select::-ms-expand {
 				top: 0;
 				left: 0;
 				z-index: 1;
-				color: red;
+				color: $negative;
 				font-size: 20px;
 			}
 		}
@@ -305,7 +311,7 @@ select::-ms-expand {
 		order: 3;
 		display: none;
 		margin-left: 10px;
-		color: red;
+		color: $negative;
 
 		&.visible {
 			display: inline-block;
@@ -315,7 +321,7 @@ select::-ms-expand {
 			order: 4;
 			display: none;
 			margin-left: 10px;
-			color: red;
+			color: $negative;
 
 			&.visible {
 				display: inline-block;
